force-app/main/default/objects/Ghost_Coaching_Event__c/Ghost_Coaching_Event__c.object-meta.xml
<CustomObject>
    <label>Coaching Event</label>
    <nameField>
        <displayFormat>CE-{00000}</displayFormat>
        <label>Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coaching Events</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>