force-app/main/default/objects/Ghost_Coaching_Event__c/fields/Coaching_Template__c.field-meta.xml
<CustomField>
    <fullName>Coaching_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Coaching Template</label>
    <referenceTo>Ghost_Coaching_Template2__c</referenceTo>
    <relationshipLabel>Coaching Events</relationshipLabel>
    <relationshipName>Coaching_Events</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>