force-app/main/default/objects/Ghost_Coaching_Event__c/fields/Employee_Total_Score__c.field-meta.xml
<CustomField>
    <fullName>Employee_Total_Score__c</fullName>
    <label>Employee Total Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>