force-app/main/default/objects/Ghost_Coaching_Event__c/fields/Previous_Score__c.field-meta.xml
<CustomField>
    <fullName>Previous_Score__c</fullName>
    <label>Previous Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>