force-app/main/default/objects/Ghost_Coaching_Event__c/fields/Recommended_Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Action_Plan__c</fullName>
    <label>Recommended Action Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>