force-app/main/default/objects/Ghost_Coaching_Event__c/fields/Self_Evaluation_Completed__c.field-meta.xml
<CustomField>
    <fullName>Self_Evaluation_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Self Evaluation Completed</label>
    <type>Checkbox</type>
</CustomField>