force-app/main/default/objects/Ghost_Coaching_Event__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit</label>
    <referenceTo>Visit__c</referenceTo>
    <relationshipLabel>Coaching Events</relationshipLabel>
    <relationshipName>Coaching_Events</relationshipName>
    <type>Lookup</type>
</CustomField>