force-app/main/default/objects/Ghost_Coaching_Event__c/listViews/My_Coaching_Events.listView-meta.xml
<ListView>
    <fullName>My_Coaching_Events</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Manager__c</columns>
    <columns>Status__c</columns>
    <columns>Manager_Total_Score__c</columns>
    <columns>Event_Start__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Coaching Events</label>
</ListView>